[gd_scene load_steps=4 format=3 uid="uid://bvd5242ybqyuc"]

[ext_resource type="Script" uid="uid://cehj7u7slfiqb" path="res://components/ui/profile_panel.gd" id="1_k4nqg"]
[ext_resource type="PackedScene" uid="uid://drm1apbdsjj5g" path="res://components/portrait/portrait_view.tscn" id="2_pv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fwkw"]
bg_color = Color(0, 0.669403, 0.96699, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="ProfilePanel" type="PanelContainer"]
custom_minimum_size = Vector2(180, 190)
offset_right = 181.0
offset_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_6fwkw")
script = ExtResource("1_k4nqg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ProfilePic" parent="MarginContainer/VBoxContainer/MarginContainer/CenterContainer" instance=ExtResource("2_pv")]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
portrait_creator_enabled = false

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 16
text = "Giga Chad"
horizontal_alignment = 1

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.716296, 0.716296, 0.716296, 1)
theme_override_font_sizes/font_size = 16
text = "@Giga Chad"
horizontal_alignment = 1

[node name="PasswordHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PasswordLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PasswordHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
editable = false
secret = true
secret_character = "‚óè"

[node name="ShowPasswordButton" type="Button" parent="MarginContainer/VBoxContainer/PasswordHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
focus_mode = 0
toggle_mode = true
text = "show"

[node name="RainbowPasswordLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PasswordHBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
size_flags_horizontal = 3
focus_mode = 0

[node name="LogInButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_mode = 0
mouse_filter = 1
text = "Lock in"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LogInButton" to="." method="_on_log_in_button_pressed"]
